--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,7 @@
     "react-scripts": "4.0.2",
     "web-vitals": "^1.1.0"
   },
-  "proxy": "http://localhost:5555",
+  "proxy": "http://0.0.0.0:5555",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
