--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,9 +10,11 @@
     "boostrap": "^2.0.0",
     "bootstrap": "^4.6.0",
     "react": "^17.0.1",
+    "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
+    "redux-thunk": "^2.3.0",
     "web-vitals": "^1.1.0"
   },
   "proxy": "http://0.0.0.0:5555",
