--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,7 +1,11 @@
 {
-  "name": "my-app",
+  "name": "study-time-board-beta",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "npm": "6.14.11",
+    "node": "v14.15.5"
+  },
   "dependencies": {
     "@reduxjs/toolkit": "^1.5.0",
     "@testing-library/jest-dom": "^5.11.9",
