--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,8 +27,8 @@
   },
   "proxy": "http://0.0.0.0:5555",
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "react-scripts --optimize_for_size --max_old_space_size=920 --gc_interval=100 start",
+    "build": "react-scripts --optimize_for_size --max_old_space_size=920 --gc_interval=100 build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
