Server side:  - Added basic implementation for connecting to database MongoDB atlas  - Added bcrypt for hashing password  - Added json web token decode/encode
Todo:
 - client side jwt storage and usage

--- a/backend/.env
+++ b/backend/.env
@@ -4,3 +4,5 @@
 
 JWT_DURATION = 86400  # Total seconds of 24 hours.
 JWT_SECRET = "qausas12lo3iknoiuh1o4i23jo10537"  # jwt secret for creating and validating the jwt token
+# mongoDb connection string, consisting of url address, username and passwortd
+MONGODB_SRV = "mongodb+srv://dbGuru:dbgurustb@cluster0.mzk5u.mongodb.net/dev"
